--- a/develop/Dockerfile
+++ b/develop/Dockerfile
@@ -1,16 +1,13 @@
-FROM alpine:3.7
-MAINTAINER Geo Van O <geo@eggheads.org>
+FROM debian:stretch-slim
+MAINTAINER Josh Gelman <gelmo@outlook.com>
 
-RUN adduser -S eggdrop
-
-# grab su-exec for easy step-down from root
-RUN apk add --no-cache 'su-exec>=0.2'
+RUN useradd eggdrop
 
 ENV EGGDROP_SHA256 74212f33f8c44be68ea6bd8c41f636620771328f9e8dc1549e218e637efbc9bc
 ENV EGGDROP_COMMIT 83d237a1d82a74dd36c86bacd4b833131143c062
 
-RUN apk --update add --no-cache tcl bash openssl
-RUN apk --update add --no-cache --virtual egg-deps tcl-dev wget ca-certificates make tar gpgme build-base openssl-dev \
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends mysqltcl \
   && wget "https://github.com/eggheads/eggdrop/archive/$EGGDROP_COMMIT.tar.gz" -O develop.tar.gz \
   && echo "$EGGDROP_SHA256  develop.tar.gz" | sha256sum -c - \
   && tar -zxvf develop.tar.gz \
@@ -22,8 +19,7 @@ RUN apk --update add --no-cache --virtual egg-deps tcl-dev wget ca-certificates 
     && make install DEST=/home/eggdrop/eggdrop ) \
   && rm -rf eggdrop-$EGGDROP_COMMIT \
   && mkdir /home/eggdrop/eggdrop/data \
-  && chown -R eggdrop /home/eggdrop/eggdrop \
-  && apk del egg-deps
+  && chown -R eggdrop /home/eggdrop/eggdrop
 
 ENV NICK=""
 ENV SERVER=""
