--- a/develop/Dockerfile
+++ b/develop/Dockerfile
@@ -11,7 +11,7 @@ RUN apt-get install -y --no-install-recommends wget mysqltcl ca-certificates
 RUN wget "https://github.com/eggheads/eggdrop/archive/$EGGDROP_COMMIT.tar.gz" -O develop.tar.gz
 RUN echo "$EGGDROP_SHA256  develop.tar.gz" | sha256sum -c -
 RUN tar -zxvf develop.tar.gz
-RUN rm develop.tar.gz \
+RUN rm develop.tar.gz
 RUN cd eggdrop-$EGGDROP_COMMIT
 RUN /bin/sh ./configure
 RUN make config
