--- a/develop/Dockerfile
+++ b/develop/Dockerfile
@@ -9,7 +9,7 @@ ENV EGGDROP_SHA256 74212f33f8c44be68ea6bd8c41f636620771328f9e8dc1549e218e637efbc
 ENV EGGDROP_COMMIT 83d237a1d82a74dd36c86bacd4b833131143c062
 
 RUN apt-get update
-RUN apt-get install -y --no-install-recommends wget mysqltcl ca-certificates libreadline7 libreadline-dev libterm-readline-gnu-perl build-essential
+RUN apt-get install -y --no-install-recommends wget tcl-dev mysqltcl ca-certificates libreadline7 libreadline-dev libterm-readline-gnu-perl build-essential
 RUN wget "https://github.com/eggheads/eggdrop/archive/$EGGDROP_COMMIT.tar.gz" -O develop.tar.gz
 RUN echo "$EGGDROP_SHA256  develop.tar.gz" | sha256sum -c -
 RUN tar -zxvf develop.tar.gz
